DOM Manipulation example in typescript

--- a/Typescript/index.html
+++ b/Typescript/index.html
@@ -6,6 +6,7 @@
     <title>Typescript</title>
 </head>
 <body>
+    <div id="demo">IBM</div>
     <script src="js/code.js"></script>
 </body>
 </html>
